--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,15 +14,22 @@ body{
 
 /* -----> cabecalho<-------*/
 .cabecalho {
-    background-color: red;
+    background-color: #A52A2A;
     height: 100px;
 }
 .cabecalho-area{
-    border:1px solid #000;
     height: 100px;
     max-width: 1140px;
     margin: auto;
     display: flex;
+}
+.menu-opener{
+    display: none;
+}
+.logo {
+    display: flex;
+    align-items: center;
+    height: 100px;
 }
 .logoimg{
     background-image: url("../images/logo.png");
@@ -30,6 +37,8 @@ body{
     height: 90px;
     background-position: center;
     background-size: cover;
+    border-radius: 100%;
+    border:1px solid #B28756;
 }
 .menu {
     flex:1;
@@ -52,9 +61,74 @@ body{
     display: flex;
     align-items: center;
     height: 100px;
-    border: 5px solid red;
+    border-bottom: 5px solid #A52A2A;
+    
 }
 .menu li a:hover{
-    border-bottom: 5px solid #FFF;
-    color:yellow;
+    border-bottom: 5px solid #B28756;
+    color:#B28756;
+}
+/*parte do banner*/
+
+.banner {
+    height: calc(100vh - 100px);
+}
+
+/*Parte da responsividade*/
+
+
+@media (max-width:450px) {
+    .logo {
+        margin-left: 10px;
+    }
+    .menu-opener{
+        display: block;
+        width: 45px;
+        margin:auto;
+        margin-right: 20px;
+        margin-top: 30px;
+        cursor: pointer;
+    }
+
+   .lista {
+       background-color:rgba(0, 0, 0, 0.8);
+       top:0;
+       position:absolute;
+       width: 100%;
+       height: 100vh;
+       transform:translatex(100%); /*coloquei todo a direita eixo x*/
+       transition: transform 200ms linear; /*animar linearmente */
+       
+   }
+    .lista_open {
+        transform: translateX(0);
+    }
+    .menu .image-area {
+        position: relative;
+        width: inherit;
+    }
+    .navigacion {
+        position: relative;
+        z-index: 99;
+        width: 70vw;
+        height: 100vh;
+        top: 0;
+        right: 0;
+    }
+    
+    .menu .lista {
+        flex-direction: column;
+        border:0;
+    }
+    .menu li a {
+        font-weight: bold;
+        height: 60px;
+        font-size: 17px;
+        margin-left: 50px;
+        border: 0;
+    }
+    .menu .menu-item-action:hover{
+        color:#B28756;
+    }
+    
 }
