--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,8 +76,70 @@ body{
 
 /*Parte da responsividade*/
 
+/*Tablet*/
+@media (min-width:450px) and (max-width:800px){
 
+    /*---------parte do cabecalho------------*/
+    .logo {
+        margin-left: 30px;
+    }
+    .menu-opener{
+        display: block;
+        width: 45px;
+        margin:auto;
+        margin-right: 20px;
+        margin-top: 30px;
+        cursor: pointer;
+    }
+
+   .lista {
+       background-color:rgba(0, 0, 0, 0.8);
+       top:0;
+       position:absolute;
+       width: 100%;
+       height: 100vh;
+       transform:translatex(100%); /*coloquei todo a direita eixo x*/
+       transition: transform 200ms linear; /*animar linearmente */
+       
+   }
+    .lista_open {
+        transform: translateX(0);
+    }
+    .menu .image-area {
+        position: relative;
+        width: inherit;
+    }
+    .navigacion {
+        position: relative;
+        z-index: 99;
+        width: 70vw;
+        height: 100vh;
+        top: 0;
+        right: 0;
+    }
+    
+    .menu .lista {
+        flex-direction: column;
+        border:0;
+    }
+    .menu li a {
+        font-weight: bold;
+        height: 60px;
+        font-size: 17px;
+        margin-left: 50px;
+        border: 0;
+    }
+    .menu .menu-item-action:hover{
+        color:#B28756;
+    }
+    /*---------parte do banner------------*/
+
+}
+
+/*Smartphone*/
 @media (max-width:450px) {
+
+    /*---------parte do cabecalho------------*/
     .logo {
         margin-left: 10px;
     }
