--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,8 +71,162 @@ body{
 /*parte do banner*/
 
 .banner {
-    height: calc(100vh - 100px);
+    background-color: red;
+    color: #FFF;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
 }
+
+.slide{
+    width: 100vw;
+    height: calc(100vh - 100px);
+    border: 1px solid #000;
+    overflow: hidden;
+    transition:all 0.4s;
+    
+}
+.slides{
+    width:600%;
+    display: flex;
+}
+/*melhorando imagens para ficar como fundo do banner*/
+
+.image-area1 {
+    background-image: url("../images/switch.jpg");
+    height: calc(100vh - 100px);
+    width: 100vw;
+    background-size: cover;
+    background-position:center;
+}
+.image-area2 {
+    background-image: url("../images/litle.jpg");
+    height: calc(100vh - 100px);
+    width: 100vw;
+    background-size: cover;
+    background-position:center;
+}
+.image-area3{
+    background-image: url("../images/NintendoSwitch.jpg");
+    height: calc(100vh - 100px);
+    width: 100vw;
+    background-size: cover;
+    background-position:center;
+}
+.image-area4{
+    background-image: url("../images/osdois.jpg");
+    height: calc(100vh - 100px);
+    width: 100vw;
+    background-size: cover;
+    background-position:center;
+}
+
+#atual{
+    transition: all 2s;
+}
+.btn{
+    position: absolute;
+    color: #FFF;
+    padding: 20px;
+    text-align: center;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    cursor:pointer;
+    transition: all 0.4s;
+    font-size:1.7em;
+    margin-top: -5px;
+}
+.btn:hover{
+    transform: scale(1.5);
+}
+#voltar{
+    top:50%;
+    left: 5%;
+}
+#next {
+    top: 50%;
+    right: 5% ;
+}
+.balls{
+    position: absolute;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    margin-top:-45px;
+}
+.balls div {
+    transition: all 0.5s;
+    border: 3px solid red;
+    padding: 6px;
+    border-radius: 50%;
+    margin-right: 15px;
+    cursor: pointer;
+}
+.balls div:hover{
+    background-color: red;
+}
+.imgAtual{
+    transition:all 0.5s;
+    background-color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*Parte da responsividade*/
 
